--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,4 +6,7 @@ jobs:
     runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v1
-    - run: docker build . -t convox/convox:${{github.ref}}
+    - uses: actions/docker/cli@master
+      args: build -t convox .
+    - uses: actions/docker/tag@master
+      args: convox convox/convox --no-latest
