--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,5 +4,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v1
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/docker/cli@master
+        args: build -t convox .
+      - uses: actions/docker/tag@master
+        args: convox convox/convox --no-latest
