--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: actions/docker/cli@master
-        args: build -t convox .
+        with:
+          args: build -t convox .
       - uses: actions/docker/tag@master
-        args: convox convox/convox --no-latest
+        with:
+          args: convox convox/convox --no-latest
