--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,14 +5,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/docker/cli@master
+      - uses: convox/ci@master
         with:
-          args: build -t convox .
-      - uses: actions/docker/tag@master
-        with:
-          args: convox convox/convox --no-latest
-      - uses: actions/docker/login@master
-        env:
-          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+          args: docker/build convox/convox
