--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: convox/ci@master
+      - uses: docker://convox/ci:master
         with:
           args: docker/build convox/convox
