--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: docker://convox/ci:master
         with:
-          args: docker/build convox/convox
+          args: docker-build convox/convox
