--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,10 +1,10 @@
-name: release
+name: push
 on:
   push:
     branches: ["*"]
     tags: ["*"]
 jobs:
-  docker:
+  release:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
@@ -13,7 +13,6 @@ jobs:
       run: docker build -t docker.pkg.github.com/convox/convox/convox:$(echo ${GITHUB_REF} | awk -F/ '{print $3}') .
     - name: login
       run: docker login docker.pkg.github.com --username convox --password "${GITHUB_TOKEN}"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
     - name: push
       run: docker push docker.pkg.github.com/convox/convox/convox:$(echo ${GITHUB_REF} | awk -F/ '{print $3}')
