--- a/pkg/atom/Makefile
+++ b/pkg/atom/Makefile
@@ -1,8 +1,11 @@
-all: generate
+.PHONY: generate mocks
 
 generate:
-	# needs k8s.io/code-generator@release-1.11
-	$(GOPATH)/src/k8s.io/code-generator/generate-groups.sh all \
+	bash ../../vendor/k8s.io/code-generator/generate-groups.sh all \
 		github.com/convox/convox/pkg/atom/pkg/client \
 		github.com/convox/convox/pkg/atom/pkg/apis \
 		atom:v1
+
+mocks:
+	rm -f mock_Interface.go
+	mockery -inpkg -name Interface
