--- a/provider/k8s/Makefile
+++ b/provider/k8s/Makefile
@@ -2,7 +2,7 @@ all: generate
 
 generate:
 	# go get -u k8s.io/code-generator/...
-	../../vendor/k8s.io/code-generator/generate-groups.sh all \
+	bash ../../vendor/k8s.io/code-generator/generate-groups.sh all \
 		github.com/convox/convox/provider/k8s/pkg/client \
 		github.com/convox/convox/provider/k8s/pkg/apis \
 		convox:v1
