--- a/provider/k8s/testdata/app.yml
+++ b/provider/k8s/testdata/app.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+  annotations:
+    convox.com/params: '{"Test":"foo"}'
   labels:
     app: app1
     name: app1
