--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,7 @@ jobs:
     - name: version
       run: echo ${GITHUB_REF} | awk -F/ '{print $3}' > ${GITHUB_WORKSPACE}/VERSION && cat ${GITHUB_WORKSPACE}/VERSION
     - name: build
-      run: docker build -t docker.pkg.github.com/convox/convox/convox:$(cat ${GITHUB_WORKSPACE}/VERSION)
+      run: docker build -t docker.pkg.github.com/convox/convox/convox:$(cat ${GITHUB_WORKSPACE}/VERSION) .
     - name: login
       run: docker login docker.pkg.github.com --username convox --password "${GITHUB_TOKEN}"
       env:
