--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,12 +10,12 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
     - name: version
-      run: echo ${GITHUB_REF} | awk -F/ '{print $3}' > ${GITHUB_WORKSPACE}/VERSION && cat ${GITHUB_WORKSPACE}/VERSION
+      run: echo "::set-env name=VERSION::$(echo ${GITHUB_REF} | awk -F/ '{print $3}'"
     - name: build
-      run: docker build -t docker.pkg.github.com/convox/convox/convox:$(cat ${GITHUB_WORKSPACE}/VERSION) .
+      run: docker build -t docker.pkg.github.com/convox/convox/convox:${VERSION} .
     - name: login
       run: docker login docker.pkg.github.com --username convox --password "${GITHUB_TOKEN}"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: push
-      run: docker push docker.pkg.github.com/convox/convox/convox:$(cat ${GITHUB_WORKSPACE}/VERSION)
+      run: docker push docker.pkg.github.com/convox/convox/convox:${VERSION}
