--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,10 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
     - name: version
-      run: echo "::set-env name=VERSION::$(echo ${GITHUB_REF} | awk -F/ '{print $3}'"
+      run: |
+        VERSION=$(echo ${GITHUB_REF} | awk -F/ '{print $3}')
+        echo ${VERSION}
+        echo "::set-env name=VERSION::${VERSION}"
     - name: build
       run: docker build -t docker.pkg.github.com/convox/convox/convox:${VERSION} .
     - name: login
