use github output semantics

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,7 +15,7 @@ jobs:
         echo ${VERSION}
         echo "::set-env name=VERSION::${VERSION}"
     - name: build
-      run: docker build -t docker.pkg.github.com/convox/convox/convox:${VERSION} .
+      run: echo ${VERSION} && docker build -t docker.pkg.github.com/convox/convox/convox:${VERSION} .
     - name: login
       run: docker login docker.pkg.github.com --username convox --password "${GITHUB_TOKEN}"
       env:
