--- a/terraform/atom/k8s/crd.yml
+++ b/terraform/atom/k8s/crd.yml
@@ -16,6 +16,10 @@ spec:
     kind: Atom
     categories:
     - convox
+  additionalPrinterColumns:
+  - name: Status
+    type: string
+    JSONPath: .status
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
