finish log polling

--- a/terraform/fluentd/do/target.conf
+++ b/terraform/fluentd/do/target.conf
@@ -16,7 +16,10 @@
 		type_name fluentd
 		logstash_format true
 		<buffer>
-			flush_interval 5
+			flush_interval 1
+			chunk_limit_size 2m
+			queued_chunks_limit_size 32
+			retry_forever true
 		</buffer>
 	</match>
 </label>
