--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,5 @@ jobs:
       uses: actions/checkout@v1
     - name: test
       run: make test
-
+    - name: coverage
+      run: curl -s https://codecov.io/bash | bash
