set default cloudwatch logs retention to 7 days

--- a/terraform/fluentd/aws/target.conf
+++ b/terraform/fluentd/aws/target.conf
@@ -12,6 +12,7 @@
 		@type cloudwatch_logs
 		region us-east-1
 		auto_create_stream true
+		retention_in_days 7
 		log_group_name_key group_name
 		log_stream_name_key stream_name
 		message_keys log
