default service init to true

--- a/pkg/manifest/testdata/full.yml
+++ b/pkg/manifest/testdata/full.yml
@@ -29,7 +29,7 @@ services:
       - SECRET
     health:
       interval: 10
-    init: true
+    init: false
     resources:
       - database
     port: 1000
