--- a/provider/k8s/testdata/app-locked.yml
+++ b/provider/k8s/testdata/app-locked.yml
@@ -13,3 +13,10 @@ metadata:
     system: convox
     type: app
   name: rack1-app1
+  ownerReferences:
+  - apiVersion: v1
+    blockOwnerDeletion: true
+    controller: true
+    kind: Namespace
+    name: ns1
+    uid: uid1
