--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,17 +10,26 @@ jobs:
     - name: checkout
       uses: actions/checkout@v1
     - name: version
+      run: echo "::set-env name=VERSION::$(echo ${{ github.ref }} | awk -F/ '{print $3}')"
+    - name: changelog
+      id: changelog
       run: |
-        VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')
-        echo "::set-env name=VERSION::${VERSION}"
+        changelog=$(git log --pretty="* %s" `git describe --abbrev=0 --tags \`git describe --abbrev=0 \`HEAD`...`git describe --abbrev=0`)
+        echo ${changelog}
+        changelog="${changelog//'%'/'%25'}"
+        changelog="${changelog//$'\n'/'%0A'}"
+        changelog="${changelog//$'\r'/'%0D'}"  
+        echo "::set-output name=text::${changelog}"
     - name: release
       id: release
-      uses: actions/create-release@v1
+      uses: ddollar/create-release@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ env.VERSION }}
+        body: ${{ steps.changelog.outputs.text }}
+        prerelease: true
         release_name: "${{ env.VERSION }}"
+        tag_name: ${{ env.VERSION }}
     - name: tools
       run: make tools
     - name: cli
@@ -52,3 +61,57 @@ jobs:
         asset_path: ./cmd/convox/pkg/convox-darwin-10.6-amd64
         asset_name: convox-macos
         asset_content_type: application/octet-stream
+  ci:
+    needs: release
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        provider:
+        - aws
+        - azure
+        - do
+        - gcp
+    steps:
+    - name: checkout
+      uses: actions/checkout@v1
+    - name: version
+      run: echo "::set-env name=VERSION::$(echo ${{ github.ref }} | awk -F/ '{print $3}')"
+    - name: name
+      run: echo "::set-env name=RACK_NAME::ci-$(date +"%Y%m%d%H%M%S")"
+    - name: provider
+      run: echo "::set-env name=PROVIDER::${{ matrix.provider }}"
+    - name: secrets
+      run: ci/secrets.sh
+      env:
+        SECRETS: ${{ toJson(secrets) }}
+    - name: dependencies
+      run: ci/dependencies.sh
+    - name: cli
+      run: ci/cli.sh
+    - name: install
+      run: ci/install.sh
+    - name: login
+      run: ci/login.sh
+    - name: wait
+      run: sleep 300
+    - name: test
+      run: ci/test.sh
+    - name: debug
+      run: |
+        export KUBECONFIG=~/.kube/config.${{ matrix.provider }}.${RACK_NAME}
+        set -x
+        kubectl get node
+        kubectl get all -n ${RACK_NAME}-system || true
+        kubectl logs deployment/api -n ${RACK_NAME}-system || true
+        kubectl logs deployment/atom -n ${RACK_NAME}-system || true
+        kubectl logs deployment/registry -n ${RACK_NAME}-system || true
+        kubectl logs deployment/router -n ${RACK_NAME}-system || true
+        kubectl get event -n ${RACK_NAME}-system || true
+        kubectl get all -n ${RACK_NAME}-httpd || true
+        kubectl logs deployment/web -n ${RACK_NAME}-httpd || true
+        kubectl get event -n ${RACK_NAME}-httpd || true
+      if: always()
+    - name: uninstall
+      run: ci/uninstall.sh
+      if: always()
