--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,27 +96,12 @@ jobs:
       run: ci/cli.sh
     - name: install
       run: ci/install.sh
-    - name: login
-      run: ci/login.sh
     - name: wait
       run: sleep 300
     - name: test
       run: ci/test.sh
     - name: debug
-      run: |
-        export KUBECONFIG=~/.kube/config.${{ matrix.provider }}.${RACK_NAME}
-        set -x
-        kubectl get node
-        kubectl describe node
-        kubectl get all -n ${RACK_NAME}-system || true
-        kubectl logs deployment/api -n ${RACK_NAME}-system || true
-        kubectl logs deployment/atom -n ${RACK_NAME}-system || true
-        kubectl logs deployment/registry -n ${RACK_NAME}-system || true
-        kubectl logs deployment/router -n ${RACK_NAME}-system || true
-        kubectl get event -n ${RACK_NAME}-system || true
-        kubectl get all -n ${RACK_NAME}-httpd || true
-        kubectl logs deployment/web -n ${RACK_NAME}-httpd || true
-        kubectl get event -n ${RACK_NAME}-httpd || true
+      run: ci/debug.sh
       if: always()
     - name: uninstall
       run: ci/uninstall.sh
