cleanup provider helpers

--- a/provider/k8s/Makefile
+++ b/provider/k8s/Makefile
@@ -1,8 +1,11 @@
 all: generate
 
 generate:
-	# go get -u k8s.io/code-generator/...
+	$(eval tmp := $(shell mktemp -d))
 	bash ../../vendor/k8s.io/code-generator/generate-groups.sh all \
 		github.com/convox/convox/provider/k8s/pkg/client \
 		github.com/convox/convox/provider/k8s/pkg/apis \
-		convox:v1
+		convox:v1 \
+		--output-base $(tmp) \
+		--go-header-file ../../hack/boilerplate.txt
+	rsync -a $(tmp)/github.com/convox/convox/provider/k8s/pkg .
