--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,21 +1,26 @@
 version = 1
 
 test_patterns = [
-  '**/*_test.go',
+  "**/*_test.go",
 ]
 
 exclude_patterns = [
-  'vendor/**',
+  "vendor/**",
 ]
 
-[[ analyzers ]]
-  name = 'go'
+[[analyzers]]
+  name = "go"
   enabled = true
-  
-  [analyzers.meta]
-    import_path = "github.com/convox/convox"
-    
 
-[[ analyzers ]]
-  name = 'docker'
+  [analyzers.meta]
+    dependencies_vendored = true
+    import_path = "github.com/convox/convox"
+
+
+[[analyzers]]
+  name = "docker"
+  enabled = true
+
+[[analyzers]]
+  name = "terraform"
   enabled = true
