manifest: add conversion for ? in timer syntax for v2 compatibility

--- a/pkg/manifest/testdata/full.yml
+++ b/pkg/manifest/testdata/full.yml
@@ -90,3 +90,16 @@ services:
       - 5000/udp
       - 5001
       - 5002/tcp
+timers:
+  alpha:
+    command: bin/alpha
+    service: api
+    schedule: "*/1 * * * ? *"
+  bravo:
+    command: bin/bravo
+    service: api
+    schedule: "*/1 * * * ?"
+  charlie:
+    command: bin/charlie
+    service: api
+    schedule: "*/1 * * * *"
