k8s: support for ip whitelist on custom balancers

--- a/pkg/manifest/testdata/full.yml
+++ b/pkg/manifest/testdata/full.yml
@@ -6,6 +6,12 @@ balancers:
         protocol: TCP
         port: 1000
       3001: 5000
+  alternate:
+    service: foo
+    ports:
+      4000: 4001
+    whitelist:
+      - 127.0.0.0/24
 environment:
   - DEVELOPMENT=true
   - GLOBAL=true
