--- a/pkg/manifest/testdata/validate.yml
+++ b/pkg/manifest/testdata/validate.yml
@@ -1,3 +1,10 @@
+balancers:
+  alpha:
+    whitelist: 1.1.1.1
+  bravo:
+    ports:
+      3000: 3001
+    service: nosuch
 resources:
   1resource:
     type: postgres
