--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -21,6 +21,38 @@ metadata:
     name: ns1
     uid: uid1
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
+    service.beta.kubernetes.io/aws-load-balancer-type: nlb
+  labels:
+    app: app1
+    balancer: alpha
+    provider: k8s
+    rack: rack1
+    release: release2
+    service: web
+    system: convox
+    type: balancer
+  name: balancer-alpha
+  namespace: rack1-app1
+spec:
+  externalTrafficPolicy: Local
+  loadBalancerSourceRanges:
+  - 127.0.0.0/16
+  ports:
+  - name: "80"
+    port: 80
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    release: RELEASE2
+    service: web
+    type: service
+  type: LoadBalancer
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
