fluentd: add configurable syslog drain

--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -5,7 +5,7 @@
 	exclude_path ["/var/log/containers/cloudwatch-agent*", "/var/log/containers/fluentd*"]
 	pos_file /var/log/fluentd-containers.log.pos
 	tag container.*
-	read_from_head true
+	read_from_head false
 	<parse>
 		@type json
 		time_format %Y-%m-%dT%H:%M:%S.%NZ
