--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -1141,6 +1141,10 @@ spec:
           - args:
             - bin/test
             env:
+            - name: INSTANCE_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
             - name: ONE_URL
               valueFrom:
                 configMapKeyRef:
