--- a/pkg/manifest/testdata/full.yml
+++ b/pkg/manifest/testdata/full.yml
@@ -47,6 +47,8 @@ services:
       - 3000/udp
     scale: 3-10
     test: make ${BAR} test
+    termination:
+      grace: 45
     tls:
       redirect: false
   proxy: &proxy
